<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="main_tab_estate_list">Liste</string>
    <string name="main_tab_estate_map">Carte</string>

    <string name="map_floating_ask_location_description_content">Rafraîchir la localisation</string>

    <string name="estate_list_no_estate">Aucun bien immobilier trouvé…</string>

    <string name="estate_title">Intitulé du bien</string>
    <string name="estate_type">Type de logement</string>
    <string name="estate_country">Pays</string>
    <string name="estate_city">Ville</string>
    <string name="estate_zip">Code</string>
    <string name="estate_address">Addresse</string>
    <string name="estate_area">m²</string>
    <string name="estate_min_area">Surface Minimum</string>
    <string name="estate_max_area">Surface Maximum</string>
    <string name="estate_price">Prix</string>
    <string name="estate_currency">€</string>
    <string name="estate_park">Parc</string>
    <string name="estate_school">École</string>
    <string name="estate_shop">Magasin</string>
    <string name="estate_agent">Agent</string>
    <string name="estate_description">Description du logement</string>
    <string name="add_edit_estate_save_description_content">Enregistrer le bien immobilier</string>

    <string name="estate_details_type_and_title">Type - Titre</string>
    <string name="estate_details_media_title">Médias</string>
    <string name="estate_details_location">Localisation</string>

    <string name="estate_rooms">Pièces</string>
    <string name="estate_bedrooms">Chambres</string>
    <string name="estate_bathrooms">Salles de bain</string>

    <string name="add_edit_estate_save_choose_image_title">Intégrer un média</string>
    <string name="add_edit_estate_save_capture_video_item">Enregistrer une vidéo</string>
    <string name="add_edit_estate_save_take_picture_item">Prendre une photo</string>
    <string name="add_edit_estate_save_image_from_gallery_item">Choisir une image depuis la galerie</string>
    <string name="add_edit_estate_save_video_from_gallery_item">Choisir une vidéo depuis la galerie</string>
    <string name="add_edit_estate_image_dialog_text">Description</string>

    <string name="add_edit_estate_image_dialog_delete_image">Souhaitez-vous supprimer l\'image ?</string>

    <string name="add_edit_estate_uncomplete">Certains champs n\'ont pas étés remplis !</string>
    <string name="add_edit_estate_cant_find_location">La localisation du bien n\'a pas été trouvée</string>

    <string name="add_edit_estate_exit_text">Êtes-vous sûr de vouloir quitter cette fenêtre ? Vos modifications seront perdues</string>
    <string name="add_edit_estate_exit_yes">Oui</string>
    <string name="add_edit_estate_exit_no">Non</string>

    <string name="add_edit_estate_save_notification">Un bien immobilier a bien été enregistré !</string>

    <string name="are_you_sure">Êtes-vous sûr ?</string>
    <string name="delete">Supprimer</string>
    <string name="visualize">Visualiser</string>
    <string name="cancel_button">Retour</string>
    <string name="ok_button">Valider</string>

    <string name="dialog_search_reset_date">Souhaitez-vous réinitialiser la date ?</string>

    <string name="reset">Réinitialiser</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <string name="search">Chercher un bien immobilier</string>

    <string name="search_estate_budget_min">Prix Minimum</string>
    <string name="search_estate_budget_max">Prix Maximum</string>

    <string name="estate_search_in_sale_since">En vente depuis</string>
    <string name="estate_search_sold_since">Vendu depuis</string>
    <string name="estate_search_time_format">Durée</string>

    <string name="search_dialog_search">Chercher</string>
    <string name="search_dialog_reset">Annuler</string>
    <string name="search_dialog_cancel">Retour</string>

    <string name="estate_details_more_option_description">Afficher plus d\'options</string>
    <string name="estate_details_sold_state_description">Déclarer le bien comme vendu ou non-vendu</string>
    <string name="estate_details_edit_estate_button_description">Modifier le bien immobilier</string>

    <string name="estate_details_edit_estate_button_edit">Modifier</string>
    <string name="estate_details_edit_estate_button_sold_to_sold">Déclarer vendu</string>
    <string name="estate_details_edit_estate_button_sold_to_unsold">Déclarer non-vendu</string>

    <string name="estate_type_all">Tout</string>
    <string name="estate_type_appartment">Appartement</string>
    <string name="estate_type_house">Maison</string>
    <string name="estate_type_loft">Loft</string>
    <string name="estate_type_manor">Manoir</string>
    <string name="estate_type_townhouse">Maison de ville</string>

    <string name="item_image_with_description_description_content">Image du bien immobilier</string>
    <string name="hint_date">JJ/MM/AAAA</string>
    <string name="in_sale_since">En vente depuis :</string>
    <string name="sold_since">Vendu depuis :</string>
    <string name="estate_pictures">Nombres d\'images</string>
    <string name="estate_sold">Vendu</string>
    <string name="estate_change_currency">Changer de monaie</string>

</resources>
