<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/search_estate_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_close"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estate_type"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_estate_close_button"
        app:layout_constraintBottom_toTopOf="@id/search_estate_country_layout">

        <AutoCompleteTextView
            android:id="@+id/search_estate_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_country_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_estate_type_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_estate_city_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_country"
            android:hint="@string/estate_country"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_city_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_estate_type_layout"
        app:layout_constraintStart_toEndOf="@id/search_estate_country_layout"
        app:layout_constraintEnd_toStartOf="@id/search_estate_zip_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_city"
            android:hint="@string/estate_city"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_weight="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_zip_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_estate_type_layout"
        app:layout_constraintStart_toEndOf="@id/search_estate_city_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_zip"
            android:hint="@string/estate_zip"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_area_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_estate_price_layout"
        app:layout_constraintTop_toBottomOf="@id/search_estate_country_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_area"
            android:hint="@string/estate_area"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_price_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/search_estate_area_layout"
        app:layout_constraintEnd_toStartOf="@id/search_estate_currency"
        app:layout_constraintTop_toBottomOf="@id/search_estate_country_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_price"
            android:hint="@string/search_estate_budget"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_estate_currency"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/estate_currency"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/search_estate_zip_layout"
        app:layout_constraintBottom_toTopOf="@id/search_estate_nbBathrooms_layout"
        app:layout_constraintStart_toEndOf="@id/search_estate_price_layout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_nbRooms_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_estate_nbBedrooms_layout"
        app:layout_constraintTop_toBottomOf="@id/search_estate_area_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_nbRooms"
            android:hint="@string/estate_rooms"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_nbBedrooms_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/search_estate_nbRooms_layout"
        app:layout_constraintEnd_toStartOf="@id/search_estate_nbBathrooms_layout"
        app:layout_constraintTop_toBottomOf="@id/search_estate_area_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_nbBedrooms"
            android:hint="@string/estate_bedrooms"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_nbBathrooms_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/search_estate_nbBedrooms_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_estate_area_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_nbBathrooms"
            android:hint="@string/estate_bathrooms"
            android:inputType="number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/search_estate_check_park"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/estate_park"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_estate_check_school"
        app:layout_constraintTop_toBottomOf="@id/search_estate_nbRooms_layout"/>

    <CheckBox
        android:id="@+id/search_estate_check_school"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/estate_school"
        app:layout_constraintStart_toEndOf="@id/search_estate_check_park"
        app:layout_constraintEnd_toStartOf="@id/search_estate_check_shop"
        app:layout_constraintTop_toBottomOf="@id/search_estate_nbBedrooms_layout"/>

    <CheckBox
        android:id="@+id/search_estate_check_shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/estate_shop"
        app:layout_constraintStart_toEndOf="@id/search_estate_check_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_estate_nbBathrooms_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_estate_agent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/search_estate_check_park" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_agent"
            android:hint="@string/estate_agent"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_estate_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/search_dialog_reset"
        app:layout_constraintTop_toBottomOf="@id/search_estate_agent_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_estate_search"/>

    <Button
        android:id="@+id/search_estate_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/search_dialog_search"
        app:layout_constraintTop_toBottomOf="@id/search_estate_agent_layout"
        app:layout_constraintStart_toEndOf="@id/search_estate_reset"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


