<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <TextView
        android:id="@+id/estate_details_type_and_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/estate_details_type_and_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/estate_details_edit_button"/>

    <ImageView
        android:id="@+id/estate_details_edit_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/estate_details_type_and_name"
        app:layout_constraintBottom_toBottomOf="@id/estate_details_type_and_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_edit"/>

    <TextView
        android:id="@+id/estate_details_media_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:text="@string/estate_details_media_title"
        app:layout_constraintTop_toBottomOf="@id/estate_details_type_and_name" />

    <ImageView
        android:id="@+id/estate_details_no_images_img"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitStart"
        android:src="@drawable/img_no_photo"
        app:layout_constraintTop_toTopOf="@id/estate_details_image_list"
        app:layout_constraintBottom_toBottomOf="@id/estate_details_image_list"
        app:layout_constraintStart_toStartOf="@id/estate_details_image_list"
        app:layout_constraintEnd_toEndOf="@id/estate_details_image_list"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/estate_details_image_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_adapter_size"
        android:layout_margin="16dp"
        tools:listitem="@layout/item_list_images_with_description"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/estate_details_media_title"/>

    <TextView
        android:id="@+id/estate_details_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:text="@string/estate_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_details_image_list"/>

    <TextView
        android:id="@+id/estate_details_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="This is a description of an estate. Anchored by a vast marble gallery sweeping staircase, the entertaining floor includes a baronial livin room facink Park Avenue, handsome library with original paneling, and tremendous dining room; all of which enjoy fireplaces."
        app:layout_constraintTop_toBottomOf="@id/estate_details_description_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/estate_details_features_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_details_description_text"
        app:layout_constraintEnd_toStartOf="@id/estate_details_location_layout">

        <TextView
            android:id="@+id/estate_details_area_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_area"
            app:drawableStartCompat="@drawable/ic_area"
            android:layout_marginTop="32dp"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/estate_details_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="1m²"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_area_title"/>

        <TextView
            android:id="@+id/estate_details_rooms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_rooms"
            app:drawableStartCompat="@drawable/ic_home"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_area"/>

        <TextView
            android:id="@+id/estate_details_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_rooms_title"/>

        <TextView
            android:id="@+id/estate_details_bathrooms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_bedrooms"
            app:drawableStartCompat="@drawable/ic_bedroom"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_rooms"/>

        <TextView
            android:id="@+id/estate_details_bathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_bathrooms_title"/>

        <TextView
            android:id="@+id/estate_details_bedrooms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_bathrooms"
            app:drawableStartCompat="@drawable/ic_bathroom"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_bathrooms"/>

        <TextView
            android:id="@+id/estate_details_bedrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:text="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_bedrooms_title"/>

        <TextView
            android:id="@+id/estate_details_shop_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_shop"
            app:drawableStartCompat="@drawable/ic_shop"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_bedrooms"/>

        <ImageView
            android:id="@+id/estate_details_is_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/estate_details_shop_title"
            app:layout_constraintTop_toTopOf="@id/estate_details_shop_title"/>

        <TextView
            android:id="@+id/estate_details_school_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_school"
            app:drawableStartCompat="@drawable/ic_school"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_shop_title"/>

        <ImageView
            android:id="@+id/estate_details_is_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/estate_details_school_title"
            app:layout_constraintTop_toTopOf="@id/estate_details_school_title"/>

        <TextView
            android:id="@+id/estate_details_park_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_park"
            app:drawableStartCompat="@drawable/ic_park"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_school_title"/>

        <ImageView
            android:id="@+id/estate_details_is_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cross"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/estate_details_park_title"
            app:layout_constraintTop_toTopOf="@id/estate_details_park_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/estate_details_is_sold_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/estate_details_features_layout"
        app:layout_constraintBottom_toBottomOf="@id/estate_details_location_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/estate_details_location_layout"
        android:src="@drawable/sold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/estate_details_location_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/estate_details_features_layout"
        app:layout_constraintTop_toBottomOf="@id/estate_details_description_text"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/estate_details_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estate_details_location"
            app:drawableStartCompat="@drawable/ic_place"
            android:layout_marginTop="32dp"
            android:drawablePadding="8dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/estate_details_location_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/estate_details_location_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="740 Park Avenue\n New York\n NY 10021\n United States"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/estate_details_lite_map"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_marginTop="8dp"
            app:liteMode="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estate_details_location_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>